<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/myGreen"
    tools:context=".imargancyContact">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="347dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/ImportantView"
        android:textColor="@color/myred"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="277dp"
        android:layout_height="255dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/callPiolice"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:backgroundTint="@color/myGreen"
            android:text="@string/policebtn" />

        <Button
            android:id="@+id/callFire"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:backgroundTint="@color/myGreen"
            android:text="@string/firebtn" />

        <Button
            android:id="@+id/callDoctor"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="@color/myGreen"
            android:text="@string/docbtn" />

        <Button
            android:id="@+id/callAmbulance"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@color/myGreen"
            android:text="@string/ambulancebtn" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="191dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/callNum"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="24dp"
        android:layout_marginTop="96dp"
        android:text="@string/webView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="159dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/medicalWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/myblue"
            android:text="@string/Medicalbtn" />

        <Button
            android:id="@+id/firsaidTip"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:backgroundTint="@color/myblue"
            android:text="@string/firstaidbtn" />

        <Button
            android:id="@+id/wethernews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/myblue"
            android:text="@string/whetherbtn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>